Add Caddy to handle certs + https

--- a/compose.yml
+++ b/compose.yml
@@ -1,8 +1,23 @@
 services:
   web:
     build: .
-    ports:
-      - "80:80"
     security_opt:
       # disable selinux labeling
       - label=disable
+
+  caddy:
+    image: caddy:latest
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile
+      - caddy_data:/data
+      - caddy_config:/config
+    environment:
+      - DOMAIN=${DOMAIN:-localhost}
+      - ACME_CA=${ACME_CA:-}
+
+volumes:
+  caddy_data:
+  caddy_config:
