Add logging + caching

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,19 @@
-# Local development (HTTP only)
+# Local development (HTTP only, no caching)
 DOMAIN=localhost
+CACHE_TTL=        # Empty = no caching
+CACHE_STALE=      # Empty = no caching
+# CADDYFILE=Caddyfile  # Default, no cache
 
 # Testing with a real domain (use staging to avoid rate limits)
 # DOMAIN=proflie.com
 # ACME_CA=https://acme-staging-v02.api.letsencrypt.org/directory
+# CACHE_TTL=1m
+# CACHE_STALE=24h
+# CADDYFILE=Caddyfile.cache
 
-# Production (automatic HTTPS with real certificates)
+# Production (automatic HTTPS with real certificates and caching)
 # DOMAIN=proflie.com
-# ACME_CA=  # Leave empty or omit to use production Let's Encrypt
+# ACME_CA=          # Leave empty or omit to use production Let's Encrypt
+# CACHE_TTL=1m      # Cache refresh interval
+# CACHE_STALE=24h   # How long to serve stale cache if backend is down
+# CADDYFILE=Caddyfile.cache
