--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,16 +9,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Login to Docker Hub
-      run: docker login -u phillaf -p ${{ secrets.DOCKERHUB_PASS }}
+      uses: docker/login-action@v3
+      with:
+        username: phillaf
+        password: ${{ secrets.DOCKERHUB_PASS }}
 
-    - name: Build Docker image
-      run: docker build -t phillaf/proflie:latest .
+    - name: Build and push web image
+      run: |
+        docker build -t phillaf/proflie-web:latest -f Dockerfile .
+        docker push phillaf/proflie-web:latest
 
-    - name: Publish Docker image
-      run: docker push phillaf/proflie
+    - name: Build and push caddy image
+      run: |
+        docker build -t phillaf/proflie-caddy:latest -f Dockerfile.caddy .
+        docker push phillaf/proflie-caddy:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -26,7 +33,7 @@ jobs:
 
     steps:
     - name: Invoke deployment hook
-      uses: distributhor/workflow-webhook@v1
+      uses: distributhor/workflow-webhook@v3
       env:
         webhook_url: ${{ secrets.WEBHOOK_URL }}
         webhook_secret: ${{ secrets.WEBHOOK_SECRET }}
